// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sequenceParser (MeO)AA(H-1NH2)AA rna 1`] = `
Object {
  "all": Array [
    Object {
      "kind": "begin",
      "label": "MeO",
    },
    Object {
      "fromBegin": 1,
      "fromEnd": 4,
      "kind": "residue",
      "label": "A",
      "value": "Amp",
    },
    Object {
      "fromBegin": 2,
      "fromEnd": 3,
      "kind": "residue",
      "label": "α",
      "replaced": true,
      "value": "Amp(H-1NH2)",
    },
    Object {
      "fromBegin": 3,
      "fromEnd": 2,
      "kind": "residue",
      "label": "A",
      "value": "Amp",
    },
    Object {
      "fromBegin": 4,
      "fromEnd": 1,
      "kind": "residue",
      "label": "A",
      "value": "Amp",
    },
    Object {
      "kind": "end",
      "label": "H",
    },
  ],
  "alternatives": Object {
    "α": Object {
      "count": 1,
    },
  },
  "begin": Object {
    "kind": "begin",
    "label": "MeO",
  },
  "end": Object {
    "kind": "end",
    "label": "H",
  },
  "replacements": Object {
    "Amp(H-1NH2)": Object {
      "label": "α",
      "modification": "H-1NH2",
      "residue": "Amp",
    },
  },
  "residues": Array [
    Object {
      "fromBegin": 1,
      "fromEnd": 4,
      "kind": "residue",
      "label": "A",
      "value": "Amp",
    },
    Object {
      "fromBegin": 2,
      "fromEnd": 3,
      "kind": "residue",
      "label": "α",
      "replaced": true,
      "value": "Amp(H-1NH2)",
    },
    Object {
      "fromBegin": 3,
      "fromEnd": 2,
      "kind": "residue",
      "label": "A",
      "value": "Amp",
    },
    Object {
      "fromBegin": 4,
      "fromEnd": 1,
      "kind": "residue",
      "label": "A",
      "value": "Amp",
    },
  ],
}
`;

exports[`sequenceParser AA(Ph)A(Ph)A(Ts)A(Ph)U 1`] = `
Object {
  "all": Array [
    Object {
      "kind": "begin",
      "label": "H",
    },
    Object {
      "fromBegin": 1,
      "fromEnd": 6,
      "kind": "residue",
      "label": "A",
      "value": "Ala",
    },
    Object {
      "fromBegin": 2,
      "fromEnd": 5,
      "kind": "residue",
      "label": "α",
      "replaced": true,
      "value": "Ala(Ph)",
    },
    Object {
      "fromBegin": 3,
      "fromEnd": 4,
      "kind": "residue",
      "label": "α",
      "replaced": true,
      "value": "Ala(Ph)",
    },
    Object {
      "fromBegin": 4,
      "fromEnd": 3,
      "kind": "residue",
      "label": "¹α",
      "replaced": true,
      "value": "Ala(Ts)",
    },
    Object {
      "fromBegin": 5,
      "fromEnd": 2,
      "kind": "residue",
      "label": "α",
      "replaced": true,
      "value": "Ala(Ph)",
    },
    Object {
      "fromBegin": 6,
      "fromEnd": 1,
      "kind": "residue",
      "label": "Θ",
      "replaced": true,
      "value": "Sec",
    },
    Object {
      "kind": "end",
      "label": "OH",
    },
  ],
  "alternatives": Object {
    "α": Object {
      "count": 2,
    },
  },
  "begin": Object {
    "kind": "begin",
    "label": "H",
  },
  "end": Object {
    "kind": "end",
    "label": "OH",
  },
  "replacements": Object {
    "Ala(Ph)": Object {
      "label": "α",
      "modification": "Ph",
      "residue": "Ala",
    },
    "Ala(Ts)": Object {
      "label": "¹α",
      "modification": "Ts",
      "residue": "Ala",
    },
    "Sec": Object {
      "id": "Sec",
      "label": "Θ",
    },
  },
  "residues": Array [
    Object {
      "fromBegin": 1,
      "fromEnd": 6,
      "kind": "residue",
      "label": "A",
      "value": "Ala",
    },
    Object {
      "fromBegin": 2,
      "fromEnd": 5,
      "kind": "residue",
      "label": "α",
      "replaced": true,
      "value": "Ala(Ph)",
    },
    Object {
      "fromBegin": 3,
      "fromEnd": 4,
      "kind": "residue",
      "label": "α",
      "replaced": true,
      "value": "Ala(Ph)",
    },
    Object {
      "fromBegin": 4,
      "fromEnd": 3,
      "kind": "residue",
      "label": "¹α",
      "replaced": true,
      "value": "Ala(Ts)",
    },
    Object {
      "fromBegin": 5,
      "fromEnd": 2,
      "kind": "residue",
      "label": "α",
      "replaced": true,
      "value": "Ala(Ph)",
    },
    Object {
      "fromBegin": 6,
      "fromEnd": 1,
      "kind": "residue",
      "label": "Θ",
      "replaced": true,
      "value": "Sec",
    },
  ],
}
`;

exports[`sequenceParser ForAlaAla(H-1OH)AlaOH 1`] = `
Object {
  "all": Array [
    Object {
      "kind": "begin",
      "label": "For",
    },
    Object {
      "fromBegin": 1,
      "fromEnd": 3,
      "kind": "residue",
      "label": "A",
      "value": "Ala",
    },
    Object {
      "fromBegin": 2,
      "fromEnd": 2,
      "kind": "residue",
      "label": "α",
      "replaced": true,
      "value": "Ala(H-1OH)",
    },
    Object {
      "fromBegin": 3,
      "fromEnd": 1,
      "kind": "residue",
      "label": "A",
      "value": "Ala",
    },
    Object {
      "kind": "end",
      "label": "OH",
    },
  ],
  "alternatives": Object {
    "α": Object {
      "count": 1,
    },
  },
  "begin": Object {
    "kind": "begin",
    "label": "For",
  },
  "end": Object {
    "kind": "end",
    "label": "OH",
  },
  "replacements": Object {
    "Ala(H-1OH)": Object {
      "label": "α",
      "modification": "H-1OH",
      "residue": "Ala",
    },
  },
  "residues": Array [
    Object {
      "fromBegin": 1,
      "fromEnd": 3,
      "kind": "residue",
      "label": "A",
      "value": "Ala",
    },
    Object {
      "fromBegin": 2,
      "fromEnd": 2,
      "kind": "residue",
      "label": "α",
      "replaced": true,
      "value": "Ala(H-1OH)",
    },
    Object {
      "fromBegin": 3,
      "fromEnd": 1,
      "kind": "residue",
      "label": "A",
      "value": "Ala",
    },
  ],
}
`;

exports[`sequenceParser H(+)AlaAla(H-1OH)AlaOH 1`] = `
Object {
  "all": Array [
    Object {
      "kind": "begin",
      "label": "H(+)",
    },
    Object {
      "fromBegin": 1,
      "fromEnd": 3,
      "kind": "residue",
      "label": "A",
      "value": "Ala",
    },
    Object {
      "fromBegin": 2,
      "fromEnd": 2,
      "kind": "residue",
      "label": "α",
      "replaced": true,
      "value": "Ala(H-1OH)",
    },
    Object {
      "fromBegin": 3,
      "fromEnd": 1,
      "kind": "residue",
      "label": "A",
      "value": "Ala",
    },
    Object {
      "kind": "end",
      "label": "OH",
    },
  ],
  "alternatives": Object {
    "α": Object {
      "count": 1,
    },
  },
  "begin": Object {
    "kind": "begin",
    "label": "H(+)",
  },
  "end": Object {
    "kind": "end",
    "label": "OH",
  },
  "replacements": Object {
    "Ala(H-1OH)": Object {
      "label": "α",
      "modification": "H-1OH",
      "residue": "Ala",
    },
  },
  "residues": Array [
    Object {
      "fromBegin": 1,
      "fromEnd": 3,
      "kind": "residue",
      "label": "A",
      "value": "Ala",
    },
    Object {
      "fromBegin": 2,
      "fromEnd": 2,
      "kind": "residue",
      "label": "α",
      "replaced": true,
      "value": "Ala(H-1OH)",
    },
    Object {
      "fromBegin": 3,
      "fromEnd": 1,
      "kind": "residue",
      "label": "A",
      "value": "Ala",
    },
  ],
}
`;

exports[`sequenceParser HAlaAla(H-1OH)AlaOH 1`] = `
Object {
  "all": Array [
    Object {
      "kind": "begin",
      "label": "H",
    },
    Object {
      "fromBegin": 1,
      "fromEnd": 3,
      "kind": "residue",
      "label": "A",
      "value": "Ala",
    },
    Object {
      "fromBegin": 2,
      "fromEnd": 2,
      "kind": "residue",
      "label": "α",
      "replaced": true,
      "value": "Ala(H-1OH)",
    },
    Object {
      "fromBegin": 3,
      "fromEnd": 1,
      "kind": "residue",
      "label": "A",
      "value": "Ala",
    },
    Object {
      "kind": "end",
      "label": "OH",
    },
  ],
  "alternatives": Object {
    "α": Object {
      "count": 1,
    },
  },
  "begin": Object {
    "kind": "begin",
    "label": "H",
  },
  "end": Object {
    "kind": "end",
    "label": "OH",
  },
  "replacements": Object {
    "Ala(H-1OH)": Object {
      "label": "α",
      "modification": "H-1OH",
      "residue": "Ala",
    },
  },
  "residues": Array [
    Object {
      "fromBegin": 1,
      "fromEnd": 3,
      "kind": "residue",
      "label": "A",
      "value": "Ala",
    },
    Object {
      "fromBegin": 2,
      "fromEnd": 2,
      "kind": "residue",
      "label": "α",
      "replaced": true,
      "value": "Ala(H-1OH)",
    },
    Object {
      "fromBegin": 3,
      "fromEnd": 1,
      "kind": "residue",
      "label": "A",
      "value": "Ala",
    },
  ],
}
`;

exports[`sequenceParser HAlaAlaAlaOH 1`] = `
Object {
  "all": Array [
    Object {
      "kind": "begin",
      "label": "H",
    },
    Object {
      "fromBegin": 1,
      "fromEnd": 3,
      "kind": "residue",
      "label": "A",
      "value": "Ala",
    },
    Object {
      "fromBegin": 2,
      "fromEnd": 2,
      "kind": "residue",
      "label": "A",
      "value": "Ala",
    },
    Object {
      "fromBegin": 3,
      "fromEnd": 1,
      "kind": "residue",
      "label": "A",
      "value": "Ala",
    },
    Object {
      "kind": "end",
      "label": "OH",
    },
  ],
  "alternatives": Object {},
  "begin": Object {
    "kind": "begin",
    "label": "H",
  },
  "end": Object {
    "kind": "end",
    "label": "OH",
  },
  "replacements": Object {},
  "residues": Array [
    Object {
      "fromBegin": 1,
      "fromEnd": 3,
      "kind": "residue",
      "label": "A",
      "value": "Ala",
    },
    Object {
      "fromBegin": 2,
      "fromEnd": 2,
      "kind": "residue",
      "label": "A",
      "value": "Ala",
    },
    Object {
      "fromBegin": 3,
      "fromEnd": 1,
      "kind": "residue",
      "label": "A",
      "value": "Ala",
    },
  ],
}
`;
